# line_navigator

./: .gitignore  README.md
gazebo_parking_world/: CMakeLists.txt  package.xml
gazebo_parking_world/maps/: example_world.pgm  example_world_clean.pgm  example_world_clean.yaml  example_world_clean_old.pgm
gazebo_parking_world/models/custom_ground_plane/: model.config  model.sdf
gazebo_parking_world/models/custom_ground_plane/materials/scripts/: custom_ground_plane.material
gazebo_parking_world/worlds/: example.world
line_navigator/: CMakeLists.txt  package.xml
line_navigator/include/line_navigator/: fake_pose.h  lane_follower.h
line_navigator/launch/: bringup.launch  mapping.launch  navigation.launch
line_navigator/launch/includes/: move_base.launch
line_navigator/params/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  trajectory_local_planner.yaml
line_navigator/rviz/: navigation.rviz
line_navigator/src/: fake_pose.cpp  fake_pose_node.cpp  lane_follower.cpp  lane_follower_node.cpp
