<?xml version="1.0"?>
<package format="2">
  <name>gazebo_parking_world</name>
  <version>0.0.0</version>
  <description>The gazebo_parking_world package</description>

  <author email="mahirgulzar343@gmail.com">Mahir Gulzar</author>
  <maintainer email="mahirgulzar343@gmail.com">Mahir Gulzar</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}" />
    <gazebo_ros gazebo_model_path="${prefix}/models" />
  </export>
</package>
