<?xml version="1.0"?>
<package format="2">
  <name>line_navigator</name>
  <version>0.0.0</version>
  <description>The line_navigator package</description>

  <maintainer email="mahirgulzar343@gmail.com">Mahir Gulzar</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>  
  <exec_depend>gmapping</exec_depend>
  <exec_depend>turtlebot3_bringup</exec_depend>
  <exec_depend>turtlebot3_slam</exec_depend>
  <exec_depend>gazebo_parking_world</exec_depend>
  
  <depend>actionlib</depend>
  <depend>gazebo_msgs</depend>

  <depend>move_base_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>costmap_2d</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>image_geometry</depend>
  <depend>opencv</depend>
  <depend>geometry_msgs</depend>

</package>
